# ce-gh-stats

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: periodic-stats.yaml
stats/: compiler-explorer.json
