[project]
name = "gh-stats"
version = "0.0.1"
description = "Compiler Explorer GitHub stats"
authors = [
    {name = "Matt Godbolt", email = "matt@godbolt.org"},
    {name = "partouf", email = "partouf@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pygithub>=2.8",
    "click>=8.1",
    "matplotlib>=3.10",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
preview = true
